--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   <!-- <h1>Test</h1> -->
   <!-- <svg class="bar-chart"></svg> -->
 
-  <svg></svg>
+  <!-- <svg></svg> -->
+
+  <svg class="pie-chart"></svg>
 
   <script src="https://d3js.org/d3.v4.min.js"></script>
   <script src="index.js"></script>
