--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 
   <!-- <svg></svg> -->
 
-  <svg class="pie-chart"></svg>
+  <!-- <svg class="pie-chart"></svg> -->
+
+  <svg class="line-chart"></svg>
 
   <script src="https://d3js.org/d3.v4.min.js"></script>
   <script src="index.js"></script>
