--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-
+  <div id="averages_bar_chart" style="margin-left: 50px; margin-top: 50px;"></div>
 
   <!-- <h1>Test</h1> -->
   <!-- <svg class="bar-chart"></svg> -->
@@ -18,10 +18,10 @@
 
   <!-- <svg class="pie-chart"></svg> -->
 
-  <svg class="line-chart"></svg>
+  <!-- <svg class="line-chart"></svg> -->
 
   <script src="https://d3js.org/d3.v4.min.js"></script>
-  <script src="index.js"></script>
+  <script src="test.js"></script>
 
 
 </body>
