begin tooltip test

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+  <div id="tooltip"></div>
   <div id="averages_bar_chart" style="margin-left: 50px; margin-top: 50px;"></div>
 
   <!-- <h1>Test</h1> -->
